syntax = "proto3";

package authentication;

service AuthenticationService {
  rpc Register (RegisterRequest) returns (UserResponse) {}
  rpc Login (LoginRequest) returns (UserResponse) {}
}

message RegisterRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string password = 4;
}

message UserResponse {
  string token = 1;
  int32 id = 2;
  string first_name = 3;
  string last_name = 4;
  string email = 5;
  string facebook_id = 6;
  string google_id = 7;
  string avatar = 8;
  string created_at = 9;
  string updated_at = 10;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}